static/style.css
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap');

*{
    margin:0;
    padding:0;
    box-sizing:border-box;
}

html,
body{
    width:100%;
    height:100%;
    background:#020712;
    color:white;
    overflow:hidden;
    font-family:Arial, Helvetica, sans-serif;
}

/* CONNECT PAGE */

.connect-page{
    width:100%;
    height:100vh;

    display:flex;
    justify-content:center;
    align-items:center;

    background:#020712;

    padding:20px;
}

/* CARD */

.connect-card{
    width:420px;
    max-width:100%;

    background:#08101d;

    border:1px solid rgba(255,255,255,.05);

    border-radius:28px;

    padding:38px;

    box-shadow:
    0 0 30px rgba(0,255,255,.03);

    transform:translateY(-35px);
}

/* LOGO */

.logo{
    font-family:'Orbitron',sans-serif;

    font-size:44px;

    line-height:1.1;

    margin-bottom:18px;

    letter-spacing:1px;

    white-space:nowrap;
}

.redx{
    color:#ff2f74;

    text-shadow:
    0 0 10px #ff2f74,
    0 0 20px #ff2f74;
}

/* DESC */

.desc{
    color:#7c89a5;

    margin-bottom:28px;

    font-size:15px;

    letter-spacing:1px;

    font-family:'Orbitron',sans-serif;
}

/* LABEL */

label{
    display:block;

    margin-top:22px;
    margin-bottom:10px;

    color:#7c89a5;

    letter-spacing:4px;

    font-size:12px;

    font-family:'Orbitron',sans-serif;
}

/* INPUT */

.connect-card input{
    width:100%;

    padding:16px;

    border:none;
    outline:none;

    border-radius:16px;

    background:#020712;

    color:white;

    font-size:16px;
}

.connect-card input::placeholder{
    color:#6d7690;
}

/* SMALL TEXT */

.small{
    margin-top:20px;

    color:#7c89a5;

    line-height:1.7;

    font-size:11px;

    font-family:'Orbitron',sans-serif;
}

/* BUTTON */

.connect-card button{
    width:100%;

    margin-top:28px;

    padding:18px;

    border:none;

    border-radius:18px;

    background:#19d3ff;

    color:black;

    font-size:24px;

    font-weight:bold;

    cursor:pointer;

    font-family:'Orbitron',sans-serif;

    letter-spacing:4px;

    transition:.3s;
}

.connect-card button:hover{
    transform:scale(1.02);
}

/* CHAT PAGE */

.chat-page{
    display:none;

    width:100%;
    height:100vh;

    background:#020712;

    position:relative;

    overflow:hidden;
}

/* TOPBAR */

.topbar{
    width:100%;
    height:70px;

    border-bottom:1px solid rgba(255,255,255,.05);

    display:flex;
    justify-content:space-between;
    align-items:center;

    padding:0 20px;

    position:fixed;

    top:0;
    left:0;

    background:#020712;

    z-index:1000;
}

/* ROOM TEXT */

.roomtext{
    color:#7c89a5;

    font-size:20px;

    letter-spacing:3px;

    font-family:'Orbitron',sans-serif;
}

.roomtext span{
    color:#19d3ff;
}

/* CLEAR BUTTON */

.clearbtn{
    width:100px;

    padding:12px;

    border:none;

    border-radius:14px;

    background:#08101d;

    color:white;

    cursor:pointer;

    font-family:'Orbitron',sans-serif;
}

/* START */

.start{
    text-align:center;

    padding-top:90px;

    color:#7c89a5;

    letter-spacing:2px;

    font-size:12px;

    font-family:'Orbitron',sans-serif;
}

/* MESSAGE AREA */

#messages{
    position:fixed;

    top:110px;

    left:0;

    width:100%;

    bottom:90px;

    overflow-y:auto;

    padding:0 15px 20px;

    display:flex;

    flex-direction:column;

    gap:14px;

    scroll-behavior:smooth;

    -webkit-overflow-scrolling:touch;
}

/* COMMON MESSAGE */

.message{
    max-width:200px;

    padding:10px 14px;

    border-radius:16px;

    line-height:1.4;

    font-size:13px;
}
/* OTHER USER */

.other{
    align-self:flex-start;

    background:#08101d;

    color:white;
}

/* YOUR MESSAGE */

.me{
    align-self:flex-end;

    background:black;

 
    border:1px solid #19d3ff;

    color:white;
}

/* USERNAME */

.username{
    font-size:12px;

    margin-bottom:6px;

    color:#19d3ff;

    font-weight:bold;

    font-family:Arial, Helvetica, sans-serif;
}

/* INPUT AREA */

.chat-input{
    position:fixed;

    bottom:0;

    left:0;

    width:100%;

    display:flex;

    gap:10px;

    padding:12px;

    align-items:center;

    background:#020712;

    z-index:999;
}

/* CHAT INPUT */

.chat-input input{
    flex:1;

    height:58px;

    border:none;
    outline:none;

    border-radius:18px;

    background:#08101d;

    color:white;

    padding:0 20px;

    font-size:16px;
}

/* SEND BUTTON */

.chat-input button{
    width:120px;

    height:58px;

    border:none;

    border-radius:18px;

    background:#19d3ff;

    color:black;

    font-size:20px;

    font-weight:bold;

    cursor:pointer;

    font-family:'Orbitron',sans-serif;

    letter-spacing:2px;
}

/* MOBILE */

@media screen and (max-width:768px){

    .connect-card{
        width:100%;
        padding:30px;
        transform:translateY(-50px);
    }

    .logo{
        font-size:34px;
    }

    .chat-input{
        padding:10px;
    }

    .chat-input button{
        width:105px;
        font-size:18px;
    }

    #messages{
        top:105px;
        bottom:85px;
    }
}

